# dpsa4fl-example-project

./: .gitignore  README.md  pyproject.toml
dpsa4fl_example_project/: client.py  main.py  server.py
