[tool.poetry]
name = "dpsa4fl-example-project"
version = "0.1.0"
description = ""
authors = ["Maxim Urschumzew <u.maxim@live.de>"]
readme = "README.md"
packages = [{include = "dpsa4fl_example_project"}]

[tool.poetry.dependencies]
python = "^3.8"
dpsa4flower =  { git = "https://github.com/dpsa-project/dpsa4flower"}
# dependencies from flower/pythorch quickstart
flwr = "^1.4.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
tqdm = "^4.63.0"

[tool.pyright]
include = ["dpsa4fl_example_project"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
